some contests view additions

--- a/app/views/contest_memberships/index.html.erb
+++ b/app/views/contest_memberships/index.html.erb
@@ -1,5 +1,42 @@
+<div class="pages">
+  <div class="common">
+    <h1><%= @contest.name %></h1>
+    <div class="post_category_menu">
+      <ul>
+        <li><%= link_to "О конкурсе", contest_path(@contest) %></li>
+        <li><%= link_to "Правила", url_for("/contests/"+@contest.id.to_s+"/rules") %></li>
+        <li class="active"><%= link_to "Конкурсные работы", contest_memberships_path(@contest) %></li>
+        <li><%= link_to "Принять участие", new_contest_membership_path(@contest) %></li>
+      </ul>
+      <div class="clear"></div>
+    </div>
+    <div class="work_list">
+      <div class="sorter_wraper">
+        <div class="cell">Сортировать по <span class="sort_date">дате добавления</span>, <span class="sort_comment">количеству комментариев</span> или <span class="sort_rating">рейтингу</span></div>
+      </div>
+      <% @memberships.each do |membership| %>
+        <div class="preview_work">
+          <div class="info">
+            <div class="thumb"><%= link_to image_tag(membership.picture.url(:thumb)), contest_membership_path(membership, contest_id: @contest.id) %></div>
+            <div class="name"><%= link_to membership.name, contest_membership_path(membership, contest_id: @contest.id) %></div>
+            <div class="author"><%= membership.user.name %></div>
+            <div class="rating"></div>
+          </div>
+        </div>
+      <% end %>
+      <div class="clear"></div>
+    </div>
+  </div>
+  <div class="sidebar"></div>
+  <div class="clear"></div>
+</div>
+
+<!--
+
 <h1>Members:</h1>
 <% @memberships.each do |membership| %>
   <%= link_to image_tag(membership.picture.url(:thumb)),
               contest_membership_path(membership, contest_id: @contest.id) %>
 <% end %>
+
+-->
