--- a/app/views/contests/rules.html.erb
+++ b/app/views/contests/rules.html.erb
@@ -3,8 +3,8 @@
     <h1><%= @contest.name %></h1>
     <div class="post_category_menu">
       <ul>
-        <li class="active"><%= link_to "О конкурсе", contest_path(@contest) %></li>
-        <li><%= link_to "Правила", url_for("/contests/"+@contest.id.to_s+"/rules") %></li>
+        <li><%= link_to "О конкурсе", contest_path(@contest) %></li>
+        <li class="active"><%= link_to "Правила", url_for("/contests/"+@contest.id.to_s+"/rules") %></li>
         <li><%= link_to "Конкурсные работы", contest_memberships_path(@contest) %></li>
         <li><%= link_to "Принять участие", new_contest_membership_path(@contest) %></li>
       </ul>
@@ -33,6 +33,7 @@
 </div>
 
 <!--
+
 <h1><%= @contest.name %></h1>
 <%= image_tag(@contest.picture.url(:medium)) if @contest.picture.exists? %>
 <p><%= @contest.description %></p>
@@ -40,4 +41,5 @@
 <%= link_to "принять участие",
             new_contest_membership_path(contest_id: @contest.id),
             class: 'signin_required' %>
+
 -->
