--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -302,6 +302,14 @@ span.sim_check.active { background-position:0px 0px; }
 .pages .common { float:left; width:840px;}
 .pages .sidebar { margin-left:860px}
 
+.rating_block { float:left; width:100px; height:92px; behavior: url(border-radius.htc); -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; background:#fcbe42; margin-right:10px; text-align:center; color:#7b571c; font-size:12px; line-height:1.3; padding-top:8px; margin-top:10px }
+.rating_block span.name { color:#7b571c; font-weight:bold;}
+.rating_block, .rating_block a { font-size:12px}
+.rating_block .rating { padding:5px;}
+
+.rating_info_start { float:left; width:100px; height:90px; behavior: url(border-radius.htc); -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; background:#ed1f24; text-align:center; color:#7b571c; font-size:12px; line-height:1.3; padding-top:10px; margin-top:10px; color:#fff; font-family:Futura; font-size:14px; position:relative}
+.rating_info_start .arrow { position:absolute;}
+
 /* DETAIL */
 .detail_page .approved_mark { behavior: url(border-radius.htc); -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; border:2px solid #fcbe42; padding:10px 40px 6px 23px; font-size:15px; color:#d4140a; font-family:Futura; display:inline-block}
 .detail_page .approved_mark img { float:left; margin-top:-36px;}
@@ -496,14 +504,14 @@ span.sim_check.active { background-position:0px 0px; }
 .profile_magazine:hover .close { display:block}
 
 
-.aboute_contest { padding:20px 0px}
+.about_contest { padding:20px 0px}
 
-.aboute_contest .thumb { width:840px; height:270px; overflow:hidden; behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; margin-bottom:20px; }
+.about_contest .thumb { width:840px; height:270px; overflow:hidden; behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; margin-bottom:20px; }
 
-.aboute_contest .left_part { float:left; width:660px;}
-.aboute_contest .right_part { float:right; width:140px;}
+.about_contest .left_part { float:left; width:660px;}
+.about_contest .right_part { float:right; width:140px;}
 
-.aboute_contest .title { font-size:20px; color:#007ba4; font-family:Futura;}
+.about_contest .title { font-size:20px; color:#007ba4; font-family:Futura;}
 
 .contest_action {}
 .contest_action ul {}
