--- a/app/views/experts/_site_activity.html.erb
+++ b/app/views/experts/_site_activity.html.erb
@@ -13,7 +13,7 @@
       
       <li class="mentions_tab">
         <a href="#">
-          <span class="count"><%= @expert.expert_mentions %></span>
+          <span class="count"><%= @expert.mentions.count %></span>
           Упоминания
         </a>
       </li>
@@ -24,6 +24,13 @@
   <div class="catalog activities_catalog">
     <% expert.approved_activities.each do |activity| %>
       <%= render 'activities/preview_catalog_item', activity: activity %>
+    <% end %>
+  </div>
+  
+  <div class="catalog mentions_catalog">
+    <% expert.mentions.each do |relation| %>
+      <%= render "mention_#{relation.class.name.underscore}",
+                 :"#{relation.class.name.underscore}" => relation %>
     <% end %>
   </div>
   
