--- a/app/views/experts/_site_activity.html.erb
+++ b/app/views/experts/_site_activity.html.erb
@@ -4,14 +4,14 @@
   </div>
   <div class="post_category_menu">
     <ul>
-      <li class="active activities_tab">
+      <li class="active expert_tab" data-for="activities_catalog">
         <a href="#">
           <span class="count"><%= @expert.approvals_count %></span>
           Кружки
         </a>
       </li>
       
-      <li class="mentions_tab">
+      <li class="expert_tab" data-for="mentions_catalog">
         <a href="#">
           <span class="count"><%= @expert.mentions.count %></span>
           Упоминания
@@ -21,13 +21,13 @@
     <div class="clear"></div>
   </div>
   
-  <div class="catalog activities_catalog">
+  <div class="catalog activities_catalog expert_tab_content">
     <% expert.approved_activities.each do |activity| %>
       <%= render 'activities/preview_catalog_item', activity: activity %>
     <% end %>
   </div>
   
-  <div class="catalog mentions_catalog">
+  <div class="catalog mentions_catalog expert_tab_content hidden">
     <% expert.mentions.each do |relation| %>
       <%= render "mention_#{relation.class.name.underscore}",
                  :"#{relation.class.name.underscore}" => relation %>
