--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -33,28 +33,7 @@
         </div>
       </div>
     </div>
-    <div class="alongside">
-      <div class="title">
-        Еще места рядом
-      </div>
-      <ul>
-        <li>
-        <span class="thumb"><a href=""><img src="samp/samp_1.jpg" alt="" /></a></span>
-        <span class="name"><a href="">Центр детских проектов и разработок "Шардам"</a></span>
-        <span class="geo">Северо-Восток</span>
-        </li>
-        <li>
-        <span class="thumb"><a href=""><img src="samp/samp_1.jpg" alt="" /></a></span>
-        <span class="name"><a href="">Центр детских проектов и разработок "Шардам"</a></span>
-        <span class="geo">Северо-Восток</span>
-        </li>
-        <li>
-        <span class="thumb"><a href=""><img src="samp/samp_1.jpg" alt="" /></a></span>
-        <span class="name"><a href="">Центр детских проектов и разработок "Шардам"</a></span>
-        <span class="geo">Северо-Восток</span>
-        </li>
-      </ul>
-    </div>
+    <%= render 'shared/sidebar' %>
   </div>
   
   <div class="common">
