--- a/app/views/contests/index.html.erb
+++ b/app/views/contests/index.html.erb
@@ -47,14 +47,7 @@
       </div>
     </div>
     <div class="sidebar">
-      <div class="alongside">
-        <div class="title">Еще места рядом</div>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </div>
+      <%= render 'shared/sidebar' %>
     </div>
     <div class="clear"></div>
   </div>
