--- a/app/views/interviews/show.html.erb
+++ b/app/views/interviews/show.html.erb
@@ -28,44 +28,7 @@
     <div class="clear"></div>
   </div>
   <div class="sidebar">
-    <div class="alongside">
-      <div class="title">Лучшие места для детей в Москве</div>
-        <ul>
-          <li>
-            <span class="thumb">
-              <a href="">
-              <img alt="" src="/assets/samp/samp_1.jpg" style="background-image: url("/assets/samp/samp_1.jpg");">
-              </a>
-            </span>
-            <span class="name">
-              <a href="">Центр детских проектов и разработок "Шардам"</a>
-            </span>
-            <span class="geo">Северо-Восток</span>
-          </li>
-          <li>
-            <span class="thumb">
-              <a href="">
-              <img alt="" src="/assets/samp/samp_1.jpg" style="background-image: url("/assets/samp/samp_1.jpg");">
-              </a>
-            </span>
-            <span class="name">
-              <a href="">Центр детских проектов и разработок "Шардам"</a>
-            </span>
-            <span class="geo">Северо-Восток</span>
-          </li>
-          <li>
-            <span class="thumb">
-              <a href="">
-              <img alt="" src="/assets/samp/samp_1.jpg" style="background-image: url("/assets/samp/samp_1.jpg");">
-              </a>
-            </span>
-            <span class="name">
-              <a href="">Центр детских проектов и разработок "Шардам"</a>
-            </span>
-            <span class="geo">Северо-Восток</span>
-          </li>
-        </ul>
-    </div>
+    <%= render 'shared/sidebar' %>
   </div>
   <div class="clear"></div>
 </div>
