--- a/app/views/contest_memberships/new.html.erb
+++ b/app/views/contest_memberships/new.html.erb
@@ -60,7 +60,9 @@
       </div>
     </div>
   </div>
-  <div class="sidebar"></div>
+  <div class="sidebar">
+    <%= render 'shared/sidebar' %>
+  </div>
   <div class="clear"></div>
 </div>
 
