--- a/app/views/contests/rules.html.erb
+++ b/app/views/contests/rules.html.erb
@@ -26,7 +26,9 @@
       <div class="clear"></div>
     </div>
   </div>
-  <div class="sidebar"></div>
+  <div class="sidebar">
+    <%= render 'shared/sidebar' %>
+  </div>
   <div class="clear"></div>
 </div>
 
