--- a/app/views/favourites/index.html.erb
+++ b/app/views/favourites/index.html.erb
@@ -34,6 +34,7 @@
     <% end %>
   </div>
   <div class="sidebar">
+    <%= render 'shared/sidebar' %>
   </div>
   <div class="clear"></div>
 </div>
