add sorting for articles

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,14 @@
   
   <div class="sorter_wraper">
     <div class="cell">
-       Сортировать по <span class="sort_date">дате добавления</span> или <span class="sort_comment">количеству комментариев</span>
+       Сортировать по
+      <span class="sort_date">
+        <%= link_to "дате добавления", '#' %>
+      </span>
+      или
+      <span class="sort_comment">
+        <%= link_to "количеству комментариев", '#' %>
+      </span>
     </div>
     <div class="clear">
     </div>
