--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -189,7 +189,7 @@
       <% expert = @activity.expert %>
       <div class="expert_opinion">
         <div class="title">Мнение эксперта</div>
-        <div class="thumb"><%= link_to image_tag(expert.photo.url), expert_path(expert) %></div>
+        <div class="thumb"><%= link_to image_tag(expert.avatar.url), expert_path(expert) %></div>
         <div class="name"><%= expert.name %></div>
 
         <div class="info"><%= expert.description %></div>
