add hidden checkbox

--- a/app/views/activities/_search_form.html.erb
+++ b/app/views/activities/_search_form.html.erb
@@ -71,3 +71,17 @@
     </div>
   </div>
 <% end %>
+
+<script type="text/javascript">
+$(document).ready(function(){
+  $(".filter_sorter li label").live('click',function(){
+    var idCheck = $(this).attr("for");
+
+    if($('#'+idCheck).attr('checked')){
+  			$(this).prev("span").removeClass("active");
+  		} else {
+  			$(this).prev("span").addClass("active");
+  		}
+  });
+});
+</script>
