--- a/app/views/activities/_approve_dialog.html.erb
+++ b/app/views/activities/_approve_dialog.html.erb
@@ -1,29 +1,17 @@
-<div class="dialog_block activity_approve_dialog hidden">
-  <div class="dialog_header">
-    <span class="close"></span>
-    <div class="dialog_title">
-      Одобрить кружок
+<%= dialog "Одобрить кружок", id: :activity_approve_dialog do %>
+  <%= form_tag activity_approve_path(activity), method: :put do %>
+    <div class="field">
+      <label>Специалист</label>
+      <%= select_tag :expert_id, options_from_collection_for_select(User.experts, :id, :name) %>
     </div>
-  </div>
-  
-  <div class="dialog_content">
-    <div class="dialog_form">
-      
-    <%= form_tag activity_approve_path(activity), method: :put do %>
-      <div class="field">
-        <label>Специалист</label>
-        <%= select_tag :expert_id, options_from_collection_for_select(User.experts, :id, :name) %>
-      </div>
-      
-      <div class="field">
-        <label>Ваш вопрос</label>
-        <%= text_area_tag :content %>
-      </div>
-      
-      <div class="button">
-        <input name="" type="submit" value="Отправить" />
-      </div>
-    <% end %>
+    
+    <div class="field">
+      <label>Ваш вопрос</label>
+      <%= text_area_tag :content %>
     </div>
-  </div>
-</div>
+    
+    <div class="button">
+      <input name="" type="submit" value="Отправить" />
+    </div>
+  <% end %>
+<% end %>
