--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -31,9 +31,9 @@
 	</div>
 	<div class="rating_block">
 	  <span class="name">Рейтинг родителей</span>
-	  <div class="rating" data-rating="<%= @activity.users_rating %>" data-activity-id="<%= @activity.users_rating %>">Звезды</div>
+	  <div class="<%= can?(:vote, @activity) ? 'rating' : 'rating_readonly' %>" data-rating="<%= @activity.users_rating %>" data-activity-id="<%= @activity.id %>">Звезды</div>
 	  <%= render partial: 'vote_count' %><br />
-	  <a href="">Отменить</a>
+	  <!-- <a href="">Отменить</a> -->
 	</div>
 	<div class="clear"></div>
 
