--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -14,7 +14,7 @@
       <div class="cat_list">
         Категории:
         <% @activity.direction_tags.each do |tag| %>
-          <%= link_to tag.name, '#' %>
+          <%= link_to tag.name, activities_path(tag: tag.id) %>
         <% end %>
       </div>
 
