--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -32,6 +32,16 @@
     <div class="description">
       <%= @article.content %>
     </div>
+    <div class="comment treeview">
+      <ul>
+        <% @comments.each do |comment| %>
+          <%= render 'shared/comment', comment: comment %>
+        <% end %>
+      </ul>
+    </div>
+    <div class="add_comment">
+      <%= render 'shared/comment_form' %>
+    </div>
     <div class="clear"></div>
   </div>
   <div class="sidebar">
@@ -39,33 +49,3 @@
   </div>
   <div class="clear"></div>
 </div>
-
-
-<!--
-<h1><%= @article.title %></h1>
-<h3><%= @article.author %></h3>
-<p><%= @article.content %></p>
-
-<h5>Article Tags</h5>
-<% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
-  <%= link_to tag.name, { action: :tag, id: tag.name }, class: css_class %>
-<% end %>
-
-Комментарии <br />
-
-<div class="comments_list">
-  <% @comments.each do |comment| %>
-    <%= render 'shared/comment', comment: comment %>
-  <% end %>
-</div>
-
-<%= render 'shared/comment_form' %>
-
-<%= content_for :head do %>
-  <script>
-    var relation = 'Article';
-    var relation_id = <%= @article.id %>;
-    var can_create_comment = <%= can? :create, :comment %>
-  </script>
-<% end %>
--->
