--- a/app/views/shared/_comment_form.html.erb
+++ b/app/views/shared/_comment_form.html.erb
@@ -1,4 +1,17 @@
-<div class="comment_form">
-  <textarea name="comment"></textarea>
-  <input class="submit_comment" name="commit" type="submit" value="Комментировать">
-</div>
+<% if !current_user.nil? %>
+  <div class="user_info">
+    Ваш комментарий
+    <div class="thumb">
+      <span class="mask"></span>
+      <%= image_tag current_user.avatar.url(:comment) %>
+    </div>
+  </div>
+  <div class="field">
+    <span class="arrow"></span>
+    <textarea name="comment"></textarea>
+  </div>
+  <div class="clear"></div>
+  <div class="button">
+    <input type="submit" class="submit_comment" value="Отправить">
+  </div>
+<% end %>
