comments for interviews

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -32,6 +32,7 @@
     <div class="description">
       <%= @article.content %>
     </div>
+    <div class="clear"></div>
     <div class="comment treeview">
       <ul>
         <% @comments.each do |comment| %>
