--- a/app/views/activities/_m_educational.html.erb
+++ b/app/views/activities/_m_educational.html.erb
@@ -16,7 +16,7 @@
         Детям <%= activity.age %> лет<br />
         Учреждение: <%= activity.organization.title %>
         </div>
-        <div class="rating readonly" data-rating="<%= activity.users_rating %>"></div>
+        <div class="rating_readonly" data-rating="<%= activity.users_rating %>"></div>
       </div>
     </div>
   <% else %>
@@ -35,7 +35,7 @@
         Детям <%= activity.age %> лет<br />
         Учреждение: <%= activity.organization.title %>
         </div>
-        <div class="rating readonly" data-rating="<%= activity.users_rating %>"></div>
+        <div class="rating_readonly" data-rating="<%= activity.users_rating %>"></div>
       </div>
     </div>
   <% end %>
