--- a/app/views/activities/educational.html.erb
+++ b/app/views/activities/educational.html.erb
@@ -1,11 +1,10 @@
-
 <div class="workshop_list">
   <div class="catalog">
     <h1>Детские кружки Москвы</h1>
     <%= render 'search_form' %>
 
     <div class="activities">
-      <%= render 'activities', activities: @activities %>
+      <%= render 'm_educational', activities: @activities %>
     </div>
   </div>
 </div>
