--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -29,6 +29,17 @@
         <%= @news.content %>
       </div>
       <div class="clear"></div>
+      <div class="comment treeview">
+        <ul>
+          <% @comments.each do |comment| %>
+            <%= render 'shared/comment', comment: comment %>
+          <% end %>
+        </ul>
+      </div>
+      <div class="add_comment">
+        <%= render 'shared/comment_form' %>
+      </div>
+      <div class="clear"></div>
     </div>
     <div class="sidebar">
       <%= render 'shared/sidebar' %>
