--- a/app/views/articles/_articles_list.html.erb
+++ b/app/views/articles/_articles_list.html.erb
@@ -10,6 +10,9 @@
       <div class="name">
         <%= link_to article.title, article %>
       </div>
+      <div class="comments_count">
+        <%= article.comments_count %>
+      </div>
       <div class="date">
         <%= article.created_at.to_s(:main) %>
       </div>
