--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -49,7 +49,7 @@
             </tr>
             <tr>
               <th><span>Сайт</span></th>
-              <td><%= link_to @activity.site, @activity.site %></td>
+	      <td><a href=<%= @activity.site %> target="_blank" ><%= @activity.site %></td>
             </tr>
             <tr>
               <th><span>Телефон</span></th>
