--- a/app/views/home/_council.html.erb
+++ b/app/views/home/_council.html.erb
@@ -7,6 +7,9 @@
     <% @experts.each do |expert| %>
       <div class="exp_preview">
         <%= link_to expert_path(expert) do %>
+        <% if expert.approvals_count != 0 %>
+        <span class="mark"><%= expert.approvals_count %></span>
+        <% end %>
           <div class="thumb">
             <%= image_tag(expert.avatar.url) %>
           </div>
