--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -45,8 +45,8 @@ h1 { font-size:22px; color:#4f4f4f}
 #main_page .color_line_right { background:url(/assets/color_line.jpg) repeat-y right}
 
 #search_block { position:absolute; left:50px; top:36px; z-index:120; }
-#search_block .search_button { padding:18px 15px; dislay:block; background:#fff;}
-#search_block .search_button.active { -moz-box-shadow:0px -3px 6px rgba(0,0,0,0.5);
+#search_block .search_button { padding:18px 15px 0 15px; dislay:block; background:#fff;}
+#search_block .search_button.active {  padding:18px 15px; -moz-box-shadow:0px -3px 6px rgba(0,0,0,0.5);
         -webkit-box-shadow:0px -3px 6px rgba(0,0,0,0.5);
         box-shadow:0px -3px 6px rgba(0,0,0,0.5);}
 
@@ -61,23 +61,41 @@ h1 { font-size:22px; color:#4f4f4f}
 
 .show_search .search_wrapper .close { background:url(/assets/close_red_big.png) no-repeat; display:block; width:32px; height:32px; overflow:hidden; text-indent:-900px; position:absolute; left: 920px; top:35px}
 
-#login_block { position:absolute; right:50px; top:35px;}
 
+
+#login_block { position:absolute; right:50px; top:36px; z-index:120;}
+#login_block .login_button { padding:18px 15px 0 15px;  dislay:block; background:#fff;}
+#login_block .login_button.active { padding:18px 15px; -moz-box-shadow:0px -3px 6px rgba(0,0,0,0.5);
+        -webkit-box-shadow:0px -3px 6px rgba(0,0,0,0.5);
+        box-shadow:0px -3px 6px rgba(0,0,0,0.5);}
+
+.show_login { background:#fff; width:100%; position:absolute; z-index:110; top:73px; -moz-box-shadow:0px -4px 6px rgba(0,0,0,0.5);
+        -webkit-box-shadow:0px -4px 6px rgba(0,0,0,0.5);
+        box-shadow:0px -4px 6px rgba(0,0,0,0.5);}
+.show_login .login_wrapper { padding:20px 50px; color:#4a4a4a; font-size:20px}
+.show_login .login_wrapper .close { background:url(/assets/close_red_big.png) no-repeat; display:block; width:32px; height:32px; overflow:hidden; text-indent:-900px; position:absolute; left: 960px; top:35px}
+.show_login .login_wrapper .login_text { padding-top:16px; display:inline-block}
 
 .show_search .search_wrapper {}
 
 /* MAIN MENU */
 #header #menu { text-align:center; position:relative; width:840px; margin:auto  }
-#header #menu li { display:inline-block; margin: 0px 7px;  border-bottom:2px solid #e3e3e3; padding-top:2px}
-#header #menu li a { font-size:17px; font-weight:500; color:#4f4f4f; text-decoration:none; display:block; padding:0px 2px 1px 2px; letter-spacing:-1px; }
-#header #menu li.current { padding:0px 2px; border:3px solid #d21a18; -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px;}
+#header #menu li { display:inline-block; margin: 0px 7px; -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px;}
+#header #menu li a { font-size:17px; font-weight:500; color:#4f4f4f; text-decoration:none; display:block; padding:3px 5px 3px 5px; letter-spacing:-1px; }
 
-.sub_menu { display:none; z-index:200; position:absolute; background:url(/assets/sub_menu_nested.png) no-repeat  95px top; padding-top:36px; width:590px; padding-left:10px; left:335px;}
+.sub_menu { display:none; z-index:200; position:absolute; background:url(/assets/sub_menu_nested.png) no-repeat  95px top; padding-top:36px; width:590px; padding-left:10px; left:114px;}
 .sub_menu li { padding:0px 2px; border:3px solid #d21a18 !important; overflow:hidden; position:relative; -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; behavior: url(border-radius.htc); background:#fbfbfb; width:110px; margin: 0px 9px !important; -moz-box-shadow:3px 3px 6px rgba(0,0,0,0.3);
         -webkit-box-shadow:3px 3px 6px rgba(0,0,0,0.3);
         box-shadow:3px 3px 6px rgba(0,0,0,0.3);}
 .sub_menu li a { line-height:1.2; padding-bottom:4px}
 
+
+
+#header #menu li:hover { border:3px solid #21a2dc; }
+#header #menu li:hover a { padding:0px 2px;}
+
+#header #menu li.current {  border:3px solid #d21a18;}
+#header #menu li.current a {  padding:0px 2px;}
 
 #nested_slider { height:395px; position:relative}
 #nested_slider  .mask { background:url(/assets/slider_mask.png) no-repeat center 40px; position:absolute; width:100%; height:300px; z-index:10 }
@@ -101,7 +119,7 @@ h1 { font-size:22px; color:#4f4f4f}
 	display:block;
 }
 
-#nested_slider .slides_container div.slide .slide_text { position:relative; z-index:20; text-shadow:1px 1px #000; font-family:Futura; font-size:24px; color:#fff; width:900px; margin-left:6%}
+#nested_slider .slides_container div.slide .slide_text { position:relative; z-index:20; text-shadow:1px 1px #000; font-family:Futura; font-size:32px; color:#fff; width:900px; margin-left:6%}
 
 #nested_slider .prev, #nested_slider .next { display:block; width:70px; height:116px; overflow:hidden; text-indent:-500px; position:absolute; z-index:15; top:130px}
 
@@ -189,7 +207,7 @@ h1 { font-size:22px; color:#4f4f4f}
 .spec_project_last .preview_cell .desc { color:#6c6c6c}
 .spec_project_last .preview_cell:hover .desc { color:#ffe1b2}
 
-.title_link { margin-left:20px; vertical-align: bottom; line-height:1.6; font-weight:bold; }
+.title_link { margin-left:20px; vertical-align: 0; line-height:1.6; font-weight:bold; }
 
 .moscow_agencies { float:left; width:760px;}
 .moscow_agencies .title { font-family:Futura; border-bottom:2px solid #cdcdc9; color:#4f4f4f; font-size:20px; padding:10px 0px; vertical-align: bottom}
