--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -1,12 +1,50 @@
 <div id="nested_slider">
   <div class="slider_control">
     <ul>
+      <li class="sl_fest"><a rel="slider_fest" class="active" href="#">О фестивале</a></li>
       <li class="sl_news"><a rel="slider_news" href="#">Новости фестиваля</a></li>
       <li class="sl_user"><a rel="slider_user" href="#">Участники</a></li>
-      <li class="sl_fest"><a rel="slider_fest" href="#">О фестивале</a></li>
       <li class="sl_org"><a rel="slider_org" href="#">Оргкомитет</a></li>
     </ul>
   </div>
+  
+  <div id="slider_fest" class="slider" style="z-index:20">
+    <div class="slides_container">
+      <div class="slide" style="background:url(/assets/samp/slide_2.jpg) no-repeat 0 top; height:395px">
+					<div class="slide_text">
+         		<div style="float:left; padding-right:50px; padding-top:100px">
+            	Парк Горького<br />
+              18 августа<br />
+              10:00-23:00<br />
+              <span style="color:#e7393b">Вход свободный</span>
+            </div>
+          </div>
+      </div>
+      <div class="slide" style="background:url(/assets/samp/slide_4.jpg) no-repeat 0 top; height:395px">
+					<div class="slide_text">
+         		<div style="float:left; padding-right:50px; padding-top:100px">
+            	Парк Горького<br />
+              18 августа<br />
+              10:00-23:00<br />
+              <span style="color:#e7393b">Вход свободный</span>
+            </div>
+          </div>
+      </div>
+      <div class="slide" style="background:url(/assets/samp/slide_1.jpg) no-repeat 0 top; height:395px">
+					<div class="slide_text">
+         		<div style="float:left; padding-right:50px; padding-top:100px">
+            	Парк Горького<br />
+              18 августа<br />
+              10:00-23:00<br />
+              <span style="color:#e7393b">Вход свободный</span>
+            </div>
+          </div>
+      </div>
+    </div> 
+    <a href="" class="next">Вперед</a>
+    <a href="" class="prev">Назад</a>
+  </div>
+  
   <div id="slider_news" class="slider">
     <div class="slides_container">
       <div style="background:url(/assets/samp/slide_samp.jpg) no-repeat 0 top; height:395px">
@@ -37,33 +75,7 @@
     <a href="" class="next">Вперед</a>
     <a href="" class="prev">Назад</a>
   </div>
-  <div id="slider_fest" class="slider" style="z-index:20">
-    <div class="slides_container">
-      <div class="slide" style="background:url(/assets/samp/slide_2.jpg) no-repeat 0 top; height:395px">
-					<div class="slide_text">
-         		<div style="float:left; padding-right:50px; padding-top:140px">
-          	Ежегодный международный фестиваль, <br />объединяющий лучшие культурные и <br />образовательные проекты для детей!
-            </div>
-          </div>
-      </div>
-      <div class="slide" style="background:url(/assets/samp/slide_4.jpg) no-repeat 0 top; height:395px">
-					<div class="slide_text">
-         		<div style="float:left; padding-right:50px; padding-top:140px">
-          	Ежегодный международный фестиваль, <br />объединяющий лучшие культурные и <br />образовательные проекты для детей!
-            </div>
-          </div>
-      </div>
-      <div class="slide" style="background:url(/assets/samp/slide_1.jpg) no-repeat 0 top; height:395px">
-					<div class="slide_text">
-         		<div style="float:left; padding-right:50px; padding-top:140px">
-          	Ежегодный международный фестиваль, <br />объединяющий лучшие культурные и <br />образовательные проекты для детей!
-            </div>
-          </div>
-      </div>
-    </div> 
-    <a href="" class="next">Вперед</a>
-    <a href="" class="prev">Назад</a>
-  </div>
+  
   <div id="slider_org" class="slider">
       <div class="slides_container">
           <div class="slide" style="background:url(/assets/samp/slide_org.jpg) no-repeat 0 top; height:395px">
