--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,12 @@
 <%= form_for @user, method: :put, html: {id: :update_profile_form} do |f| %>
-  <%= f.label :email, 'Email' %>
-  <%= f.text_field :email %>
-  <%= f.label :name, 'Name' %>
-  <%= f.text_field :name %>
+  <div class="field">
+    <%= f.label :email, 'Email' %>
+    <%= f.text_field :email %>
+  </div>
+  <div class="field">
+    <%= f.label :name, 'Name' %>
+    <%= f.text_field :name %>
+  </div>
   <% @user.errors.each do |field, message| %>
     <p><strong><%= field %>:</strong> <%= message %></p>
   <% end %>
