fix main page 09.06  3

--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -99,7 +99,8 @@
       <div class="title">Добро пожаловать в мир ярких людей!</div>
       <div class="order_bank_catd">Заказать уникальную<br />родительскую карту Москвича</div>
       <div class="bank_text">
-        Московский кредитный банк рад возможности подарить маленьким и взрослым москвичам этот праздник этим прекрасным летом 2012 года, когда все цветет.
+
+        Московский кредитный банк рад возможности подарить маленьким и взрослым москвичам этот праздник этим прекрасным летом 2012 года, когда все цветет и вселяет в наши душу надежду.
 
         <div class="signature">Александр НИКОЛАШИН,<br />Президент Московского кредитного банка</div>
       </div>
