--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -660,12 +660,12 @@ span.sim_check.active { background-position:0px 0px; }
 #footer .copy { padding-bottom:12px;}
 
 #footer .gen_sponsor span { opacity:0.6; font-size:17px; font-weight:600; line-height:1.2 }
-#footer .gen_sponsor img { margin-top:10px}
+#footer .gen_sponsor img { margin-bottom:10px}
 
 #footer .gen_organizator { padding-top:20px}
 #footer .gen_organizator span { opacity:0.6; font-size:17px; font-weight:600; float:left; width:140px; text-align:center; margin-top:54px; line-height:1.2}
 
-#footer .phone_info { font-size:11px; opacity:0.6; padding-top:10px;}
+#footer .phone_info { font-size:11px; opacity:0.6; padding-bottom:10px;}
 #footer .phone_info span { font-size:17px; font-weight:600;}
 
 
