--- a/app/views/activities/_preview_catalog_item.html.erb
+++ b/app/views/activities/_preview_catalog_item.html.erb
@@ -20,6 +20,6 @@
     Учреждение: <%= link_to activity.organization.title, activity.organization %> 
     <% end %>
     
-    <div class="rating"></div>
+    <div class="rating_readonly" data-rating="<%= activity.users_rating %>"></div>
   </div>
 </div>
