fix main page 09.06  4

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -22,7 +22,7 @@
           </ul>
         </div>
         <div class="copy">
-          &copy; 2012 ООО &laquo;Брайт Пипл Хэдквотерс&raquo;.<br />
+          &copy; 2012 ООО &laquo;Брайт Пипл&raquo;.<br />
           Все права защищены.<br />
         </div>
         <div class="create">
