--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -102,7 +102,7 @@
 
         Московский кредитный банк рад возможности подарить маленьким и взрослым москвичам этот праздник этим прекрасным летом 2012 года, когда все цветет и вселяет в наши душу надежду.
 
-        <div class="signature">Александр НИКОЛАШИН,<br />Президент Московского кредитного банка</div>
+        <div class="signature">Александр НИКОЛАШИН,<br />Президент Московского Кредитного Банка</div>
       </div>
       <div class="clear"></div>
     </div>
