sponsors pictures and views

--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div class="post_info">
         <div class="thumb">
-          <img width="238" alt="" src="/assets/samp/post_samp_prev.jpg" style="background-image: url('/assets/samp/post_samp_prev.jpg');">
+          <%= image_tag @news.picture.url(:medium) %>
         </div>
         <div class="other_link">
           <div class="title">Об авторе</div>
