--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -360,7 +360,7 @@ span.sim_check.active { background-position:0px 0px; }
 .detail_page .rating_block, .detail_page .rating_block a { font-size:12px}
 .detail_page .rating_block .rating { padding:5px;}
 
-.title_block { background:url(/assets/magaz_arrow_red.png) no-repeat 0px 13px; padding:5px 0px 5px 20px; color:#0090c8; font-size:20px; font-family:Futura}
+.title_block { margin-top:20px; background:url(/assets/magaz_arrow_red.png) no-repeat 0px 13px; padding:5px 0px 5px 20px; color:#0090c8; font-size:20px; font-family:Futura}
 
 .detail_page .dop_info { float:left; width:32%; margin-right:1%; padding:10px 0px}
 .detail_page .dop_info span.dop_title { background:url(/assets/magaz_arrow_red.png) no-repeat 0px 7px;font-size:16px;padding:0 0 15px 20px; font-family:Futura; display:block}
@@ -388,7 +388,7 @@ span.sim_check.active { background-position:0px 0px; }
 
 #ruk_slider .pagination { display:none}
 
-.share_block { background:#e5e5e5; -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; padding:15px 25px; font-family:Futura}
+.share_block { margin-top:20px; background:#e5e5e5; -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; padding:15px 25px; font-family:Futura}
 .share_block.entertainment { background:#ffd0e3}
 
 .schedule table { width:100%; color:#525252; font-size:14px; border-collapse:collapse;}
