fix some chtoto tam 2

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -317,11 +317,11 @@ span.sim_check.active { background-position:0px 0px; }
 .entertainment_list .preview_catalog { width:25%;}
 
 /* CATALOGS  PAGER */
-.catalog .pager { text-align:center}
-.catalog .pager ul {}
-.catalog .pager li { display:inline-block; behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; margin:5px; border:1px solid #c1c1c1}
-.catalog .pager li a { display:block; height:30px; width:30px; text-align:center; color:#515151; font-size:18px; text-decoration:none; line-height:30px; }
-
+ .pager { text-align:center}
+ .pager ul {}
+ .pager li { display:inline-block; behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; margin:5px; border:1px solid #c1c1c1}
+ .pager li a { display:block; height:30px; width:30px; text-align:center; color:#515151; font-size:18px; text-decoration:none; line-height:30px; }
+ .pager li span {  display:block; height:30px; width:30px; text-align:center; color:red; font-size:18px; text-decoration:none; line-height:30px;}
 
 .pages { padding:10px}
 .pages .common { float:left; width:840px;}
